--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -6,7 +6,7 @@
     android:layout_height="@dimen/item_movie_height"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="@dimen/radius_card_movie">
 
     <ImageView
         android:id="@+id/item_movie_poster"
