--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_movieFragment_to_movieByGenreFragment"
             app:destination="@id/movieByGenreFragment" />
+        <action
+            android:id="@+id/action_movieFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/newsFragment"
@@ -35,7 +38,11 @@
         android:id="@+id/searchMovieFragment"
         android:name="me.dzikry.movapp.ui.search.movie.SearchMovieFragment"
         android:label="fragment_search_movie"
-        tools:layout="@layout/fragment_search_movie" />
+        tools:layout="@layout/fragment_search_movie" >
+        <action
+            android:id="@+id/action_searchMovieFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchNewsFragment"
         android:name="me.dzikry.movapp.ui.search.news.SearchNewsFragment"
@@ -49,5 +56,20 @@
         <argument
             android:name="genre_id"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_movieByGenreFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="me.dzikry.movapp.ui.movie_detail.MovieDetailFragment"
+        android:label="fragment_movie_detail"
+        tools:layout="@layout/fragment_movie_detail" >
+        <argument
+            android:name="movie_id"
+            app:argType="long" />
+        <action
+            android:id="@+id/action_movieDetailFragment_to_movieByGenreFragment"
+            app:destination="@id/movieByGenreFragment" />
     </fragment>
 </navigation>
